--- a/TopCoder/ColourHolic/ColourHolic.html
+++ b/TopCoder/ColourHolic/ColourHolic.html
@@ -226,15 +226,15 @@ li.testcase .data {
         <h2 class="section-title">Problem Statement</h2>
         <div class="problem-intro">
             <intro escaped="1"><p>
-VendelÃ­n has a part-time job in an &quot;all for 1 euro&quot; bargain store. He was given the task of putting several items into a row on one long shelf in the display window.
+Vendel¨ªn has a part-time job in an &quot;all for 1 euro&quot; bargain store. He was given the task of putting several items into a row on one long shelf in the display window.
 </p>
 <br />
 <p>
-VendelÃ­n is shape-blind: he only cares about the items' colours. This time, he sees that each of his items comes in one of just 4 colours: turquoise, magenta, beige and lavender (but don't worry, we've numbered them 0 through 3 for your convenience). Also, in order to attract customers, he wants each two adjacent items on the shelf to have different colours. 
+Vendel¨ªn is shape-blind: he only cares about the items' colours. This time, he sees that each of his items comes in one of just 4 colours: turquoise, magenta, beige and lavender (but don't worry, we've numbered them 0 through 3 for your convenience). Also, in order to attract customers, he wants each two adjacent items on the shelf to have different colours. 
 </p>
 <br />
 <p>
-You're given an <type>int[]</type> <tt><b>n</b></tt> with 4 elements. For each <tt>i</tt>, VendelÃ­n has <tt><b>n</b>[i]</tt> items of colour <tt>i</tt>.
+You're given an <type>int[]</type> <tt><b>n</b></tt> with 4 elements. For each <tt>i</tt>, Vendel¨ªn has <tt><b>n</b>[i]</tt> items of colour <tt>i</tt>.
 </p>
 <br />
 <p>
